# fenixml

./: .gitignore  Cargo.toml  LICENSE  Nomina 1.2 atributo otros pagos.xml  Nomina 1.2 con SNCF.xml  README.md  build.rs  compEst.xml  index.html
src/: .main.rs.swp  main.rs
src/app/: .app.html.swp  app.html  app.js  styles.css  usoCfdi.csv
web/: index.html  styles.css  web.js
