[package]
name = "fenixml"
version = "0.1.0"
authors = ["Luis Angel Muñoz Franco <luisangelmf@gmail.com>"]
edition = "2018"
license = "Artistic License 2.0"
readme = "README.md"
build= "build.rs"

[dependencies]
xmltree = "^0.8"
web-view = { git = "https://github.com/Boscop/web-view", features = ["edge"] }
tinyfiledialogs = "3.3.9"
format_money = "0.1.1"
ureq = "1.3.0"



[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "FeniXML: Visor de CFDI v.3.3 desde su archivo xml"
OriginalFilename = "fenixml.exe"
LegalCopyright = "Luis Angel Muñoz Franco © 2020"
